src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Responded</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Investigation Completed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on NBTY</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AER_Created__c</fullName>
        <label>AER_Created</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admitted_to_hospital_for_observation__c</fullName>
        <description>As a result of your ER visit, were you then admitted to the hospital as an inpatient for treatment, or further observation?</description>
        <inlineHelpText>As a result of your ER visit, were you then admitted to the hospital as an inpatient for treatment, or further observation?</inlineHelpText>
        <label>Admitted to hospital for observation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agile_Status_Description__c</fullName>
        <description>Response description from PQM/Agile Case Update service</description>
        <label>Agile Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agile_Status__c</fullName>
        <description>Response code from PQM/Agile Case Update service</description>
        <label>Agile Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergy_Description__c</fullName>
        <label>Allergy Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bayer_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bayer Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Puritan&apos;s Pride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitamin World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfectly Pure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Shield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albertson&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Mart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Engineered Supplements &amp; Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Fortress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carb Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor&apos;s Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duane Reade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earthly Elements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equaline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ester-C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everclen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finest Natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finest Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexamin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giant Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good N&apos; Natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CTI_Search__c</fullName>
        <label>CTI Search</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CT_Category__c</fullName>
        <label>Category Complaint Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CT_Subcategory__c</fullName>
        <label>Subcategory Complaint Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseId_Xref__c</fullName>
        <label>CaseId Xref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Case Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Driver__c</fullName>
        <label>Case Driver</label>
        <picklist>
            <picklistValues>
                <fullName>None Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Account Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Catalog/Savings Passport Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Request/Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation/Return Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback (Compliments/Complaints)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Product Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Brand Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping &amp; Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Passport Card Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Web One Touch Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Failed to Post to AS400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <label>Case Resolution</label>
        <picklist>
            <controllingField>Case_Sub_Reason__c</controllingField>
            <picklistValues>
                <fullName>Adjusted Order to Match Payment Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advised customer to contact their bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottles Were Empty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communicated Customs Holding, Waiting for Pick Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couldn&apos;t find order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Dispute Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Dispute Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Placed Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Provided New Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Request Not Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Request Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer satisfied; No action necessary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Merge Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Send Order History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Update Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Found order, cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gave Tracking &amp; Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercepted Delivery with UPS, No Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued Refund/Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item Was Not Our Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed Check Back for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None, Customer Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None (Customer Not Satisfied)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order in Error Screen, Cancelled Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order in Error Screen, Placed Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order in Safetech Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order in Safetech Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Reason__c</fullName>
        <label>Case Sub Reason</label>
        <picklist>
            <controllingField>Case_Reason__c</controllingField>
            <picklistValues>
                <fullName>Issue with Login, Favorites, or History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Graphics or Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Back Order Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Order Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged in Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped Incorrect Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Shipping Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Tracking Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customs Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Received Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Multiple Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order History Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order without Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment without Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Payment Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsigned Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Web One Touch Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Refund Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Overpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Underpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Case_Routing_Requested__c</fullName>
        <description>Time when Cisco Case Routing was Requested</description>
        <label>Cisco Case Routing Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cisco_Case_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cisco Case Routing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cisco_Formula__c</fullName>
        <formula>IF (CONTAINS (OwnerId, &apos;00G&apos;), CASE(OwnerId, &apos;00Gd0000001LrBL&apos;, &quot;BO - Vitamin World - E2C&quot;, &apos;00Gd0000001LrBH&apos;, &quot;BO - Puritans Pride - E2C&quot;, &apos;00Gd0000001LyRW&apos;, &quot;BO - Product Questions - W2C&quot;, &apos;00Gd0000001LrBK&apos;, &quot;BO - Puritan&apos;s Pride - W2C&quot;, &apos;00Gd0000001LrBO&apos;, &quot;BO - Vitamin World - W2C&quot;, &apos;Not a Queue in the Formula&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cisco Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Comments__c</fullName>
        <label>Closing Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Reason_Long__c</fullName>
        <label>Closing Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Reason__c</fullName>
        <label>Closing Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Category__c</fullName>
        <label>Complaint Category</label>
        <picklist>
            <controllingField>Complaint_Type__c</controllingField>
            <picklistValues>
                <fullName>Allergen Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Resistant Closure (CRC) Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choking with intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class III Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class II Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class I Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disintegration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor Advised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Object/Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulation Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Dissatisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labeling Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rancid/Spoiled Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taste/Odor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Resolution__c</fullName>
        <label>Complaint Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Issued Refund/Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Label, Waiting on Item Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Subcategory__c</fullName>
        <label>Complaint Subcategory</label>
        <picklist>
            <picklistValues>
                <fullName>&quot;Popping&quot; sound heard when bottle is opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration site conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advised not to take the product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amounts/Breakdowns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar has white film on it / Fat is separating from the bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bars are hard/stale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Believes the label is misleading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Believes the product is rancid or spoiled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood and lymphatic system disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle size or waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken bars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken desiccant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken glass bottle (Exception: Class II Illness if injury is involved)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken inner seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken or crushed tablets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken or damaged can, bottle or jar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken outer seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt inner seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap/lid or inner seal didnot close properly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap came off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in consistency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in flavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in odor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in shape or size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in sweetener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chewable tablets are too hard to chew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Resistant Closure (CRC) Issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Type_Category__c</fullName>
        <label>Complaint Type Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Type_Subcategory__c</fullName>
        <label>Complaint Type Subcategory</label>
        <picklist>
            <picklistValues>
                <fullName>Subcategory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Class I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class II Non-Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class II Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consumer_Apt__c</fullName>
        <label>Consumer Apt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_City__c</fullName>
        <label>Consumer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Country__c</fullName>
        <label>Consumer Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Email__c</fullName>
        <label>Consumer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Consumer_Name__c</fullName>
        <label>Consumer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Number__c</fullName>
        <label>Consumer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Phone__c</fullName>
        <label>Consumer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Consumer_Response_RequiredDetail__c</fullName>
        <label>Detail for Consumer Response</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Response_Required__c</fullName>
        <label>Consumer Response Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Sample_Location__c</fullName>
        <label>Consumer Sample Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Sample_Requested__c</fullName>
        <label>Consumer Sample Requested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Satisfied__c</fullName>
        <label>Is Consumer Satisfied?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Species__c</fullName>
        <label>Consumer Species</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_State_Picklist__c</fullName>
        <label>Consumer State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumer_State__c</fullName>
        <label>Consumer State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Street_2__c</fullName>
        <label>Consumer Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Street__c</fullName>
        <label>Consumer Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Zip_Code__c</fullName>
        <label>Consumer Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>